--- a/native/package.json
+++ b/native/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.23.1"
+  },
+  "devDependencies": {
+    "firebase": "^2.4.2"
   }
 }
